welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: only classes can have declared but undefined members
def faireCar()
    ^PatternPicture:36: error: not found: value ColorYELLOW
setCouleurBrosse(ColorYELLOW)
                 ^